--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,9 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
+        "platform": {
+            "php": "8.0.2"
+        },
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
